; ModuleID = '/home/carl/AnghaBench/How-to-Make-a-Computer-Operating-System/src/sdk/src/libc/src/stdio/extr_support_bufio.c_bufcon_lenp.c'
source_filename = "/home/carl/AnghaBench/How-to-Make-a-Computer-Operating-System/src/sdk/src/libc/src/stdio/extr_support_bufio.c_bufcon_lenp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bufcon_lenp(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = icmp ult i32 %4, 16
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  store i32 1, i32* %2, align 4
  br label %32

7:                                                ; preds = %1
  %8 = load i32, i32* %3, align 4
  %9 = icmp ult i32 %8, 256
  br i1 %9, label %10, label %11

10:                                               ; preds = %7
  store i32 2, i32* %2, align 4
  br label %32

11:                                               ; preds = %7
  %12 = load i32, i32* %3, align 4
  %13 = icmp ult i32 %12, 4096
  br i1 %13, label %14, label %15

14:                                               ; preds = %11
  store i32 3, i32* %2, align 4
  br label %32

15:                                               ; preds = %11
  %16 = load i32, i32* %3, align 4
  %17 = icmp ult i32 %16, 65536
  br i1 %17, label %18, label %19

18:                                               ; preds = %15
  store i32 4, i32* %2, align 4
  br label %32

19:                                               ; preds = %15
  %20 = load i32, i32* %3, align 4
  %21 = icmp ult i32 %20, 1048576
  br i1 %21, label %22, label %23

22:                                               ; preds = %19
  store i32 5, i32* %2, align 4
  br label %32

23:                                               ; preds = %19
  %24 = load i32, i32* %3, align 4
  %25 = icmp ult i32 %24, 16777216
  br i1 %25, label %26, label %27

26:                                               ; preds = %23
  store i32 6, i32* %2, align 4
  br label %32

27:                                               ; preds = %23
  %28 = load i32, i32* %3, align 4
  %29 = icmp ult i32 %28, 268435456
  br i1 %29, label %30, label %31

30:                                               ; preds = %27
  store i32 7, i32* %2, align 4
  br label %32

31:                                               ; preds = %27
  store i32 8, i32* %2, align 4
  br label %32

32:                                               ; preds = %31, %30, %26, %22, %18, %14, %10, %6
  %33 = load i32, i32* %2, align 4
  ret i32 %33
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
